2005-02-01  Pierre Chifflier  <pollux@cpe.fr>

	* feature: new commands SSCN and CPSV, used for secure FXP
	* feature: errors in TCL module are catched and displayed to stderr

2005-01-28  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: disable file cache code, it is broken (not thread-safe)
	* bugfix: removed some calls to gethostbyname (not thread-safe)

2005-01-25  Pierre Chifflier  <pollux@cpe.fr>

	* feature: added event DELE when a file is deleted

2005-01-18  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: problems with > 2GB files on 32-bit arches (closes: #0024)

2005-01-14  Pierre Chifflier  <pollux@cpe.fr>

	* feature: use statvfs instead of statfs if detected
	* feature: option "reject_unknown_user" to reject users after USER command
	* feature: the main part (server+lib) now compiles on solaris
	* feature: libwzd-perl now works: wzd_send_message added
	* bugfix: build error on openbsd (crypt.h)

2005-01-12  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: server sending garbage on 64-bits platforms
	* bugfix: libmysql.h missing, unable to compile mysql backend

2005-01-07  Pierre Chifflier  <pollux@cpe.fr>

	* feature: all site commands converted to new format
	* feature: configure checks if system adds _ to exported symbols
	* bugfix: include wchar.h only if needed

2005-01-03  Pierre Chifflier  <pollux@cpe.fr>

	* feature: added pam authentication via libwzd-auth
	* feature: added TLS client certificate check via libwzd-auth
	* feature: new config directives tls_ca_file and tls_ca_path
	* feature: backend plaintext use libwzd-auth
	* bugfix: no timeout on read/write with gnutls
	* bugfix: site color does not remove flag correctly
	* bugfix: misc problems in SITE commands
	* bugfix: memory leak in %if cookie

004-12-18  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: cannot remove directories with message (closes: #0023)

2004-12-15  Pierre Chifflier  <pollux@cpe.fr>

	* feature: new config directive 'tls_certificate_key'
	* feature: new library libwzd-auth
