@@ -2,6 +2,8 @@
 
 	* feature: new commands SSCN and CPSV, used for secure FXP
 	* feature: errors in TCL module are catched and displayed to stderr
+	* bugfix: file descriptors not closed on ident connections
+	* bugfix: file descriptors not closed in win32 version
 
 2005-01-28  Pierre Chifflier  <pollux@cpe.fr>
 
